--- a/index.html
+++ b/index.html
@@ -1,56 +1,198 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Whitepace-Portfólio</title>
-</head>
-<body>
-    <!--header-->
-    <header style="background-image: url(./img/background-home.jpg);">
-        <!--container-->
-        <div class="container">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--font-awesome-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <!--Link css-->
+      <link rel="stylesheet" href="./css/style.css">
+      <title>Whitepace-Portfólio</title>
+   </head>
+   <body>
+      <!--header-->
+      <header style="background-image: url(./img/background-home.jpg);">
+         <!--container-->
+         <div class="container">
             <nav>
-                <a href="index.html">
-                    <img src="./img/logo.png" alt="logo">
-                </a>
-                <ul class="ul">
-                    <a href="index.html">Home</a>
-                    <a href="sobre.html">Sobre</a>
-                    <a href="serviços.html">Serviços</a>
-                    <a class="btn" href="contatos.html">Contatos</a>
-                </ul>
+               <a href="index.html">
+               <img src="./img/logo.png" alt="logo">
+               </a>
+               <ul class="ul">
+                  <a href="index.html">Home</a>
+                  <a href="sobre.html">Sobre</a>
+                  <a href="serviços.html">Serviços</a>
+                  <a class="btn" href="contatos.html">Contatos</a>
+                  <div class="close-icon">
+                    <i class="fa fa-times-circle"></i> <!--Menu Mobile-->
+
+                  </div>
+               </ul>
+               <div class="menu-icon"> <!--menu responsivo-->
+                <i class="fa fa-bars"></i>
+               </div> <!--End menu responsivo-->
             </nav>
             <section class="baner">
-                <div class="baner-text">
-                    <h1>Whitepace</h1>
-                    <p>Construa a sua marca, conquiste o mundo sem habilidades de código ou designer necessárias</p>
-                    <a href="contato.html" class="btn">Entrar em contato</a>
-                </div>
-
+               <div class="baner-text">
+                  <h1>Whitepace</h1>
+                  <p>Construa a sua marca, conquiste o mundo sem habilidades de código ou designer necessárias</p>
+                  <a href="contato.html" class="btn">Entrar em contato</a>
+               </div>
             </section>
-        </div>
-        <!--End Container-->
-    </header>
-    <!--End header-->
-    <!--Faça-mais-->
-    <section class="faça-mais">
-        <!--container-->
-        <div class="container">
+         </div>
+         <!--End Container-->
+      </header>
+      <!--End header-->
+      <!--Faça-mais-->
+      <section class="faça-mais">
+         <!--container-->
+         <div class="container">
             <div class="faça-mais-text">
-                <h3>Faça mais com Whitepace</h3>
-                <p>Criação de websites, loja virtual, blogs para pequenas,
-                     médias e grandes empresas ter um site online nunca foi tão fácil.
-                 </p>
-                 <a href="contato.html" class="btn animete-btn">Entrar em contato</a>
+               <h3>Faça mais com Whitepace</h3>
+               <p>Criação de websites, loja virtual, blogs para pequenas,
+                  médias e grandes empresas ter um site online nunca foi tão fácil.
+               </p>
+               <a href="contato.html" class="btn animete-btn">Entrar em contato</a>
             </div>
             <div class="faça-mais-img">
-                <img src="./img/img-1.png" alt="">
+               <img src="./img/img-1.png" alt="">
             </div>
+         </div>
+         <!--End Container-->
+      </section>
+      <!--Faça-mais-->
+      <!--Faça-mais 2-->
+      <section class="faça-mais">
+         <!--container-->
+         <div class="container">
+            <div class="faça-mais-img">
+               <img src="./img/img-2.png" alt="">
+            </div>
+            <div class="faça-mais-text">
+               <h3>Ter um website nunca foi tão fácil</h3>
+               <p>Agora com a nossa empresa ter um website é algo simplesmente fácil 
+                  Basta entrar em contato e nós vamos desenvolver o seu website em 
+                  tempo recorde para você começar a conquistar o mundo.
+               </p>
+               <a href="contato.html" class="btn">Entrar em contato</a>
+            </div>
+         </div>
+         <!--End Container-->
+      </section>
+      <!--end Faça-mais 2-->
+      <!--Depoimentos-->
+      <section class="depoimentos">
+         <div class="conteiner">
+            <h3>Nossos Depoimentos</h3>
+            <p>Leia o que os nossos clientes falam de nós para o mundo</p>
+            <div class="cards">
+               <!--card item 1-->
+               <div class="card-item">
+                  <img src="./img/depoimento1.jpg" alt="dpt">
+                  <p class="name-user">Sônia Marques</p>
+                  <p class="depoimento-user">
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                     Quo aspernatur iopsdkmepsum asperiores ad, voluptate qui. 
+                     Aliquid vero ut quam relkoplrfpellendus eius odit eveniet 
+                     in voluptatem dolor. Ab eveniet po lkeefacere consequatur.
+                     Lorem ipsum dolor sit amet consectggetur adipisicing elit.
+                     Sequi eum ea sapiente eius repellat at fuga maxime dolore!
+                  </p>
+                  <div class="estrelas">
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </div>
+               </div>
+               <!--End card 1-->
+               <!--card item 2-->
+               <div class="card-item">
+                  <img src="./img/depoimento2.jpg" alt="dpt">
+                  <p class="name-user">Jerferson Luiz</p>
+                  <p class="depoimento-user">
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                     Quo aspernatur iopsdkmepsum asperiores ad, voluptate qui. 
+                     Aliquid vero ut quam relkoplrfpellendus eius odit eveniet 
+                     in voluptatem dolor. Ab eveniet po lkeefacere consequatur.
+                     Lorem ipsum dolor sit amet consectggetur adipisicing elit.
+                     Sequi eum ea sapiente eius repellat at fuga maxime dolore!
+                  </p>
+                  <div class="estrelas">
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </div>
+               </div>
+               <!--End card 2-->
+               <!--card item 3-->
+               <div class="card-item">
+                  <img src="./img/depoimento3.jpg" alt="dpt">
+                  <p class="name-user">Pedro Miguel</p>
+                  <p class="depoimento-user">
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                     Quo aspernatur iopsdkmepsum asperiores ad, voluptate qui. 
+                     Aliquid vero ut quam relkoplrfpellendus eius odit eveniet 
+                     in voluptatem dolor. Ab eveniet po lkeefacere consequatur.
+                     Lorem ipsum dolor sit amet consectggetur adipisicing elit.
+                     Sequi eum ea sapiente eius repellat at fuga maxime dolore!
+                  </p>
+                  <div class="estrelas">
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
+                     <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                     <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                  </div>
+               </div>
+               <!--End card 3-->
+            </div>
+         </div>
+      </section>
+      <!--end Depoimento!-->
+      <!--Clientes-->
+      <section class="clientes">
+         <div class="container">
+            <h3>Nossos Clientes</h3>
+            <p>Prestamos serviços para todo tipo de empresa ou projeto, olhe aguns dos nossos clientes</p>
+            <div>
+               <img src="./img/apple.png" alt="">
+               <img src="./img/microsoft.png" alt="">
+               <img src="./img/slack.png" alt="">
+               <img src="./img/google.png" alt="">
+            </div>
+         </div>
+      </section>
+      <!--End Clientes-->
+      <section class="faça-mais">
+         <div class="container">
+            <div class="faça-mais-text">
+               <h3>Tenha um website seguro</h3>
+               <p>Trabalhamos com tecnologias atualizadas, rápidas às mais seguras desse mercado, nós fazemos backup e manutenção do seu site em tempo record.
+               </p>
+               <a href="contato.html" class="btn animete-btn">Entrar em contato</a>
+            </div>
+            <div class="faça-mais-img">
+               <img src="./img/security.png" alt="">
+            </div>
+         </div>
+      </section>
+      <!--End Clientes-->
+      <!--footer-->
+      <footer class="footer">
+        <div class="conteiner">
+            <div class="links">
+                <i class="fa fa-facebook-official"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa fa-github"></i>
+                <i class="fa fa-linkedin-square"></i>
+            </div>
+            <p>Desenvolvido por André Moura Theodoro</p>
         </div>
-        <!--End Container-->
-    </section>
-    <!--Faça-mais-->
-</body>
+      </footer>
+      <!--End footer-->
+   </body>
 </html>
