--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
                   <a href="sobre.html">Sobre</a>
                   <a href="serviços.html">Serviços</a>
                   <a class="btn" href="contatos.html">Contatos</a>
-                  <div class="close-icon">
-                    <i class="fa fa-times-circle"></i> <!--Menu Mobile-->
-
-                  </div>
+                  <div class="close-icon" onclick="closeMenu()">
+                     <!--Menu Mobile-->
+                    <i class="fa fa-times-circle"></i> 
+                  </div> 
+                  <!--End Menu Mobile-->
                </ul>
-               <div class="menu-icon"> <!--menu responsivo-->
+               <!--menu responsivo-->
+               <div class="menu-icon" onclick="openMenu()"> 
                 <i class="fa fa-bars"></i>
-               </div> <!--End menu responsivo-->
+               </div> 
+               <!--End menu responsivo-->
             </nav>
             <section class="baner">
                <div class="baner-text">
@@ -194,5 +197,6 @@
         </div>
       </footer>
       <!--End footer-->
+      <script src="./JavaScript/main.js"></script>
    </body>
 </html>
